fix: width top slider on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2165,6 +2165,12 @@ h3 {
             transform: translate(0px, -50px);
   }
 }
+@media screen and (max-width: 470px) {
+  .slider-bottom .slider-bottom__img-container {
+    width: 60px;
+    height: 70px;
+  }
+}
 .footer {
   width: 100%;
   background-color: var(--footer);
